did the components even more, need to do the chart component next

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,8 @@
 <!-- main page  -->
 <article>
-  
+  <app-dashboard></app-dashboard>
+  <app-accounts></app-accounts>
   <nav>
-    <!-- links go here -->
     <a routerLink='/stock-page'>ALL STOCKS</a> 
   </nav>
-
 </article>
