--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,5 @@
-<p>dashboard works!</p>
+<article>
+    <app-overview></app-overview>
+    <app-chart></app-chart>
+    <app-top5-lists></app-top5-lists>
+</article>
