--- a/src/app/dashboard/overview/overview.component.html
+++ b/src/app/dashboard/overview/overview.component.html
@@ -1,1 +1,14 @@
-<p>overview works!</p>
+<div>CHUCK YOUR STOCKS</div>
+<div>Ashleigh Chubba</div>
+<div>
+    <div>Net Worth</div>
+    <div>$56,045,103</div>
+</div>
+<div>
+    <div>Cash Value</div>
+    <div>$2056.45</div>
+</div>
+<div>
+    <div>Investment Value</div>
+    <div>$2056.45</div>
+</div>
