did grid structure of main page, now will do html/css of dashboard overview

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,5 @@
 <!-- main page  -->
-<article>
-  <app-dashboard></app-dashboard>
-  <app-accounts></app-accounts>
-  <nav>
-    <a routerLink='/stock-page'>ALL STOCKS</a> 
-  </nav>
-  <router-outlet></router-outlet>
+<article id = "wholePage">
+  <app-dashboard id = "dashboard"></app-dashboard>
+  <app-accounts id = "accounts"></app-accounts>
 </article>
