--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,4 +2,8 @@
     <app-overview></app-overview>
     <app-chart></app-chart>
     <app-top5-lists></app-top5-lists>
+    <nav>
+        <a routerLink='/stock-page'>ALL STOCKS</a> 
+    </nav>
+    <router-outlet></router-outlet>
 </article>
