i installed Futura, now time to make overview pretty

--- a/src/app/dashboard/overview/overview.component.html
+++ b/src/app/dashboard/overview/overview.component.html
@@ -1,14 +1,18 @@
-<div>CHUCK YOUR STOCKS</div>
-<div>Ashleigh Chubba</div>
-<div>
-    <div>Net Worth</div>
-    <div>$56,045,103</div>
-</div>
-<div>
-    <div>Cash Value</div>
-    <div>$2056.45</div>
-</div>
-<div>
-    <div>Investment Value</div>
-    <div>$2056.45</div>
-</div>
+<article id = "overview">
+    <div id = "logo">CHUCK YOUR STOCKS</div>
+    <div id = "username">Ashleigh Chubba</div>
+    <div id = "valueSummary">
+        <div>
+            <div>Net Worth</div>
+            <div>$56,045,103</div>
+        </div>
+        <div>
+            <div>Cash Value</div>
+            <div>$2056.45</div>
+        </div>
+        <div>
+            <div>Investment Value</div>
+            <div>$2056.45</div>
+        </div>
+    </div>
+</article>
