--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,6 +1,6 @@
 #dashboard {
-    background-color: pink;
-    height:100vh;
+    height:100%;
     display: grid;
     grid-template-rows: 25% 40% 35%;
+    margin: 0% 3% 0% 3%;
 }
