--- a/src/app/dashboard/overview/overview.component.html
+++ b/src/app/dashboard/overview/overview.component.html
@@ -3,16 +3,16 @@
     <div id = "username">Ashleigh Chubba</div>
     <div id = "valueSummary">
         <div>
-            <div>Net Worth</div>
-            <div>$56,045,103</div>
+            <div id = "valueNames">Net Worth</div>
+            <div id = "valueNetWorth">$56,045,103</div>
         </div>
         <div>
-            <div>Cash Value</div>
-            <div>$2056.45</div>
+            <div id = "valueNames">Cash Value</div>
+            <div id = "valueCash">$2056.45</div>
         </div>
         <div>
-            <div>Investment Value</div>
-            <div>$2056.45</div>
+            <div id = "valueNames">Investment Value</div>
+            <div id = "valueInvestment">$2056.45</div>
         </div>
     </div>
 </article>
