did buttons and legends of graph

--- a/src/app/dashboard/chart/chart.component.html
+++ b/src/app/dashboard/chart/chart.component.html
@@ -1,1 +1,25 @@
-<div>chart works!</div>
+<article id = "chart">
+    <div id = "buttonsAndLegends">
+        <div id = "buttons">
+            <button id = "button">LAST WEEK</button>
+            <button id = "button">LAST MONTH</button>
+            <button id = "button">LAST QUARTER</button>
+            <button id = "button">YEAR TO DATE</button>
+        </div>
+        <div id = "legends">
+            <div id = "legendWrappers">
+                <div id="circleNet"></div>
+                <div id = "legendName">Net Worth</div>
+            </div>
+            <div id = "legendWrappers">
+                <div id="circleCash"></div>
+                <div id = "legendName">Cash</div>
+            </div>
+            <div id = "legendWrappers">
+                <div id="circleInvestment"></div>
+                <div id = "legendName">Investment</div>
+            </div>
+        </div>
+    </div>
+    <div id = "graph"></div>
+</article>
