--- a/src/app/accounts/accounts.component.html
+++ b/src/app/accounts/accounts.component.html
@@ -1,3 +1,6 @@
 <article id = "accounts">
-
+    <app-acct [accountType] = "cash" id = "cash"></app-acct>
+    <hr>
+    <app-acct [accountType] = "investment" id = "investment"></app-acct>
+    <div id = "netWorth">nljvanv</div>
 </article>
