--- a/src/app/accounts/accounts.component.html
+++ b/src/app/accounts/accounts.component.html
@@ -2,5 +2,8 @@
     <app-acct [accountType] = "cash" id = "cash"></app-acct>
     <hr>
     <app-acct [accountType] = "investment" id = "investment"></app-acct>
-    <div id = "netWorth">nljvanv</div>
+    <div id = "netWorth">
+        <div id = "netWorthLabel">NET WORTH</div>
+        <div id = "netWorthValue">$56,045,103.23</div>
+    </div>
 </article>
