made wrapper class around dashboard/accts, so that BOTH pages have a route each

--- a/src/app/wrapper/dashboard/dashboard.component.html
+++ b/src/app/wrapper/dashboard/dashboard.component.html
@@ -2,4 +2,5 @@
     <app-overview></app-overview>
     <app-chart></app-chart>
     <app-top5-lists></app-top5-lists>
+    <!-- <app-stock-page></app-stock-page> -->
 </article>
