routing worksgit add ., now onto html/css for stock page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!-- main page  -->
 <article>
-  <!-- <app-wrapper></app-wrapper>
-  <app-stock-page></app-stock-page> -->
+  <!-- <app-wrapper></app-wrapper> -->
+  <!-- <app-stock-page></app-stock-page> -->
   <router-outlet></router-outlet>
 </article>
