finished stock page header, now onto stock table header

--- a/src/app/stock-page/stock-page.component.html
+++ b/src/app/stock-page/stock-page.component.html
@@ -1,1 +1,14 @@
-<p>stock-page works!</p>
+<article>
+    <div id = "headerWrapper">
+        <div id = "header">
+            <div id = "col1">
+                <div id = "logo">CHUCK YOUR STOCKS</div>
+                <div id = "stockPageTitle">STOCKS</div>
+            </div>
+            <nav id ="col2"><button id = "exitButton" routerLink='/home-page'>BACK</button></nav>
+        </div>
+    </div>
+    <div id = "stockTable">
+
+    </div>
+</article>
