--- a/src/app/stock-page/stock-page.component.html
+++ b/src/app/stock-page/stock-page.component.html
@@ -1,4 +1,4 @@
-<article>
+<article id = "wholePage">
     <div id = "headerWrapper">
         <div id = "header">
             <div id = "col1">
@@ -9,6 +9,77 @@
         </div>
     </div>
     <div id = "stockTable">
-
+        <table id = "table">
+            <tr>
+                <th id = "tableHeaderL">Ticker</th>
+                <th id = "tableHeader">Date</th>
+                <th id = "tableHeader">Price</th>
+                <th id = "tableHeaderL">Amount</th>
+                <th id = "tableHeaderL">Gain/Loss</th>
+            </tr>
+            <tr>
+                <td id = "tableValue">APPL</td>
+                <td id = "tableValue">2021-04-23</td>
+                <td id = "tableValue">$34.56</td>
+                <td id = "tableValue">12</td>
+                <td id = "tableValue">%3.45</td>
+            </tr>
+            <tr>
+                <td id = "tableValue">APPL</td>
+                <td id = "tableValue">2021-04-23</td>
+                <td id = "tableValue">$34.56</td>
+                <td id = "tableValue">12</td>
+                <td id = "tableValue">%3.45</td>
+            </tr>
+            <tr>
+                <td id = "tableValue">APPL</td>
+                <td id = "tableValue">2021-04-23</td>
+                <td id = "tableValue">$34.56</td>
+                <td id = "tableValue">12</td>
+                <td id = "tableValue">%3.45</td>
+            </tr>
+            <tr>
+                <td id = "tableValue">APPL</td>
+                <td id = "tableValue">2021-04-23</td>
+                <td id = "tableValue">$34.56</td>
+                <td id = "tableValue">12</td>
+                <td id = "tableValue">%3.45</td>
+            </tr>
+            <tr>
+                <td id = "tableValue">APPL</td>
+                <td id = "tableValue">2021-04-23</td>
+                <td id = "tableValue">$34.56</td>
+                <td id = "tableValue">12</td>
+                <td id = "tableValue">%3.45</td>
+            </tr>
+            <tr>
+                <td id = "tableValue">APPL</td>
+                <td id = "tableValue">2021-04-23</td>
+                <td id = "tableValue">$34.56</td>
+                <td id = "tableValue">12</td>
+                <td id = "tableValue">%3.45</td>
+            </tr>
+            <tr>
+                <td id = "tableValue">APPL</td>
+                <td id = "tableValue">2021-04-23</td>
+                <td id = "tableValue">$34.56</td>
+                <td id = "tableValue">12</td>
+                <td id = "tableValue">%3.45</td>
+            </tr>
+            <tr>
+                <td id = "tableValue">APPL</td>
+                <td id = "tableValue">2021-04-23</td>
+                <td id = "tableValue">$34.56</td>
+                <td id = "tableValue">12</td>
+                <td id = "tableValue">%3.45</td>
+            </tr>
+            <tr>
+                <td id = "tableValue">APPL</td>
+                <td id = "tableValue">2021-04-23</td>
+                <td id = "tableValue">$34.56</td>
+                <td id = "tableValue">12</td>
+                <td id = "tableValue">%3.45</td>
+            </tr>
+        </table>
     </div>
 </article>
