--- a/src/app/wrapper/accounts/acct/acct.component.html
+++ b/src/app/wrapper/accounts/acct/acct.component.html
@@ -1,8 +1,17 @@
 <article id = "section">
     <div id = "accountTitle">{{accountType}}</div>
-    <div id = "accountBalance">$2,345.56</div>
+    <div id = "accountBalance">${{totalValue}}</div>
     <div id = "listOfAccts">
-        <div id = "acct">
+        <ng-container *ngFor="let account of todaysBanks">
+            <div id = "acct">
+                <div id = "col1">
+                    <div id = "itemStock">{{account["bank"]}}</div>
+                    <div id = "row2">{{account["type"]}}</div>
+                </div>
+                <div id = "itemPercentage">{{account["balance"]}}</div>
+            </div>
+        </ng-container> 
+        <!-- <div id = "acct">
             <div id = "col1">
                 <div id = "itemStock">Wells Fargo</div>
                 <div id = "row2">Checking</div>
@@ -29,13 +38,6 @@
                 <div id = "row2">Checking</div>
             </div>
             <div id = "itemPercentage">$2065.45</div>
-        </div>
-        <div id = "acct">
-            <div id = "col1">
-                <div id = "itemStock">Wells Fargo</div>
-                <div id = "row2">Checking</div>
-            </div>
-            <div id = "itemPercentage">$2065.45</div>
-        </div>
+        </div> -->
     </div>
 </article>
