finished big values and accounts HTTPS, now onto more HTTPS

--- a/src/app/wrapper/accounts/accounts.component.html
+++ b/src/app/wrapper/accounts/accounts.component.html
@@ -4,6 +4,6 @@
     <app-acct [totalValue] = "totalInvestValue" [accountType] = "investment" [todaysBanks] = "todaysInvestBanks" id = "investment"></app-acct>
     <div id = "netWorth">
         <div id = "netWorthLabel">NET WORTH</div>
-        <div id = "netWorthValue">$56,045,103.23</div>
+        <div id = "netWorthValue">${{netWorth}}</div>
     </div>
 </article>
