--- a/src/app/wrapper/dashboard/overview/overview.component.html
+++ b/src/app/wrapper/dashboard/overview/overview.component.html
@@ -4,15 +4,15 @@
     <div id = "valueSummary">
         <div>
             <div id = "valueNames">Net Worth</div>
-            <div id = "valueNetWorth">$56,045,103.23</div>
+            <div id = "valueNetWorth">${{netWorth}}</div>
         </div>
         <div>
             <div id = "valueNames">Cash Value</div>
-            <div id = "valueCash">$2056.45</div>
+            <div id = "valueCash">${{totalCashValue}}</div>
         </div>
         <div>
             <div id = "valueNames">Investment Value</div>
-            <div id = "valueInvestment">$2056.45</div>
+            <div id = "valueInvestment">${{totalInvestValue}}</div>
         </div>
     </div>
 </article>
