added new column in stock table

--- a/src/app/stock-page/stock-page.component.html
+++ b/src/app/stock-page/stock-page.component.html
@@ -11,15 +11,17 @@
     <div id = "stockTable">
         <table id = "table">
             <tr>
-                <th id = "tableHeaderL">Ticker</th>
+                <th id = "tableHeader">Ticker</th>
                 <th id = "tableHeader">Date</th>
-                <th id = "tableHeader">Price</th>
-                <th id = "tableHeaderL">Amount</th>
-                <th id = "tableHeaderL">Gain/Loss</th>
+                <th id = "tableHeader">Purchase Price</th>
+                <th id = "tableHeader">Current Price</th>
+                <th id = "tableHeader">Amount</th>
+                <th id = "tableHeader">Gain/Loss</th>
             </tr>
             <tr>
                 <td id = "tableValue">APPL</td>
                 <td id = "tableValue">2021-04-23</td>
+                <td id = "tableValue">$34.56</td>
                 <td id = "tableValue">$34.56</td>
                 <td id = "tableValue">12</td>
                 <td id = "tableValue">%3.45</td>
@@ -28,12 +30,6 @@
                 <td id = "tableValue">APPL</td>
                 <td id = "tableValue">2021-04-23</td>
                 <td id = "tableValue">$34.56</td>
-                <td id = "tableValue">12</td>
-                <td id = "tableValue">%3.45</td>
-            </tr>
-            <tr>
-                <td id = "tableValue">APPL</td>
-                <td id = "tableValue">2021-04-23</td>
                 <td id = "tableValue">$34.56</td>
                 <td id = "tableValue">12</td>
                 <td id = "tableValue">%3.45</td>
@@ -42,12 +38,6 @@
                 <td id = "tableValue">APPL</td>
                 <td id = "tableValue">2021-04-23</td>
                 <td id = "tableValue">$34.56</td>
-                <td id = "tableValue">12</td>
-                <td id = "tableValue">%3.45</td>
-            </tr>
-            <tr>
-                <td id = "tableValue">APPL</td>
-                <td id = "tableValue">2021-04-23</td>
                 <td id = "tableValue">$34.56</td>
                 <td id = "tableValue">12</td>
                 <td id = "tableValue">%3.45</td>
@@ -56,12 +46,6 @@
                 <td id = "tableValue">APPL</td>
                 <td id = "tableValue">2021-04-23</td>
                 <td id = "tableValue">$34.56</td>
-                <td id = "tableValue">12</td>
-                <td id = "tableValue">%3.45</td>
-            </tr>
-            <tr>
-                <td id = "tableValue">APPL</td>
-                <td id = "tableValue">2021-04-23</td>
                 <td id = "tableValue">$34.56</td>
                 <td id = "tableValue">12</td>
                 <td id = "tableValue">%3.45</td>
@@ -70,12 +54,38 @@
                 <td id = "tableValue">APPL</td>
                 <td id = "tableValue">2021-04-23</td>
                 <td id = "tableValue">$34.56</td>
+                <td id = "tableValue">$34.56</td>
                 <td id = "tableValue">12</td>
                 <td id = "tableValue">%3.45</td>
             </tr>
             <tr>
                 <td id = "tableValue">APPL</td>
                 <td id = "tableValue">2021-04-23</td>
+                <td id = "tableValue">$34.56</td>
+                <td id = "tableValue">$34.56</td>
+                <td id = "tableValue">12</td>
+                <td id = "tableValue">%3.45</td>
+            </tr>
+            <tr>
+                <td id = "tableValue">APPL</td>
+                <td id = "tableValue">2021-04-23</td>
+                <td id = "tableValue">$34.56</td>
+                <td id = "tableValue">$34.56</td>
+                <td id = "tableValue">12</td>
+                <td id = "tableValue">%3.45</td>
+            </tr>
+            <tr>
+                <td id = "tableValue">APPL</td>
+                <td id = "tableValue">2021-04-23</td>
+                <td id = "tableValue">$34.56</td>
+                <td id = "tableValue">$34.56</td>
+                <td id = "tableValue">12</td>
+                <td id = "tableValue">%3.45</td>
+            </tr>
+            <tr>
+                <td id = "tableValue">APPL</td>
+                <td id = "tableValue">2021-04-23</td>
+                <td id = "tableValue">$34.56</td>
                 <td id = "tableValue">$34.56</td>
                 <td id = "tableValue">12</td>
                 <td id = "tableValue">%3.45</td>
