Acccounts are tied to remote data

--- a/src/app/wrapper/accounts/acct/acct.component.html
+++ b/src/app/wrapper/accounts/acct/acct.component.html
@@ -8,7 +8,7 @@
                     <div id = "itemStock">{{account["bank"]}}</div>
                     <div id = "row2">{{account["type"]}}</div>
                 </div>
-                <div id = "itemPercentage">{{account["balance"]}}</div>
+                <div id = "itemPercentage">${{account["balance"]}}</div>
             </div>
         </ng-container> 
         <!-- <div id = "acct">
