--- a/src/app/wrapper/dashboard/top5-lists/top5-lists.component.html
+++ b/src/app/wrapper/dashboard/top5-lists/top5-lists.component.html
@@ -1,7 +1,7 @@
 <article id = "top5lists">
     <div id = "twoLists">
-        <app-list [title] = "gain" [isGain] = true></app-list>
-        <app-list [title] = "loss" [isGain] = false></app-list>
+        <app-list [top5list] = "top5Gainers" [title] = "gain" [isGain] = true></app-list>
+        <app-list [top5list] = "top5Losers" [title] = "loss" [isGain] = false></app-list>
     </div>
     <div id = "allStocksButtonWrapper">
         <div></div>
