--- a/src/app/wrapper/dashboard/chart/chart.component.html
+++ b/src/app/wrapper/dashboard/chart/chart.component.html
@@ -1,4 +1,4 @@
-<!-- <article id = "chart">
+<article id = "chart">
     <div id = "buttonsAndLegends">
         <div id = "buttons">
             <button id = "button">LAST WEEK</button>
@@ -21,19 +21,18 @@
             </div>
         </div>
     </div>
-    <div id = "graph"></div>
-</article> -->
+    <div *ngIf="dataForChart.length != 0" id = "graph">
+        <ngx-charts-line-chart
+            [legend]="legend"
+            [showXAxisLabel]="showXAxisLabel"
+            [showYAxisLabel]="showYAxisLabel"
+            [xAxis]="xAxis"
+            [yAxis]="yAxis"
+            [xAxisLabel]="xAxisLabel"
+            [yAxisLabel]="yAxisLabel"
+            [results]="dataForChart"
+            >
+        </ngx-charts-line-chart>
+    </div>
+</article>
 
-<ngx-charts-bar-vertical 
-    [view]="[1000,400]"
-    [results]="saleData"
-    [xAxisLabel]="'Products'"
-    [legendTitle]="'Product Sale Chart'"
-    [yAxisLabel]="'Sale'"
-    [legend]="true"
-    [showXAxisLabel]="true"
-    [showYAxisLabel]="true"
-    [xAxis]="true"
-    [yAxis]="true"
-    [gradient]="true">
-</ngx-charts-bar-vertical>
