--- a/src/app/wrapper/dashboard/chart/chart.component.css
+++ b/src/app/wrapper/dashboard/chart/chart.component.css
@@ -50,21 +50,21 @@
     width: 20px;
     height: 20px;
     border-radius: 25px;
-    background: #94B253;
+    background: #c8b3cb;
 }
 
 #circleCash {
     width: 20px;
     height: 20px;
     border-radius: 25px;
-    background: #516B9D;
+    background: #a7385d;
 }
 
 #circleInvestment {
     width: 20px;
     height: 20px;
     border-radius: 25px;
-    background: #8BC0DE;
+    background: #7aa3e5;
 }
 
 #legendName {
